cluster/apps/services/hammond/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hammond
  namespace: services
  labels:
    app.kubernetes.io/name: hammond
    app.kubernetes.io/instance: hammond
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hammond
      app.kubernetes.io/instance: hammond
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hammond
        app.kubernetes.io/instance: hammond
      annotations:
        backup.velero.io/backup-volumes: hammond-data
        pre.hook.backup.velero.io/container: fsfreeze
        pre.hook.backup.velero.io/command: '["/sbin/fsfreeze", "--freeze", "/config", "/assets"]'
        post.hook.backup.velero.io/container: fsfreeze
        post.hook.backup.velero.io/command: '["/sbin/fsfreeze", "--unfreeze", "/config", "/assets]'
    spec:
      containers:
        # ref: https://github.com/akhilrex/hammond
        - name: hammond
          image: akhilrex/hammond
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: hammond-data
              subPath: config
              mountPath: /config
            - name: hammond-data
              subPath: data
              mountPath: /assets
          resources:
            limits:
              memory: 2000Mi
            requests:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 30
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: fsfreeze
          image: ghcr.io/k8s-at-home/fsfreeze:v2.37-r0
          resources: {}
          volumeMounts:
            - name: hammond-data
              subPath: config
              mountPath: /config
            - name: hammond-data
              subPath: data
              mountPath: /assets
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
      restartPolicy: Always
      volumes:
        - name: hammond-data
          persistentVolumeClaim:
            claimName: hammond-data
