cluster/apps/services/hammond/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hammond
  namespace: services
  labels:
    app.kubernetes.io/name: hammond
    app.kubernetes.io/instance: hammond
spec:
  selector:
    app.kubernetes.io/name: hammond
    app.kubernetes.io/instance: hammond
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
