cluster/apps/services/hammond/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-hammond
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`hammond.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: rfc1918
        - name: hammond
        - name: headers-sts
        # - name: basicauth
      services:
        - name: hammond
          namespace: services
          port: 3000
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
